<resources>
    <string name="app_name">CrashNotifier</string>
    <string name="app_description">Crash Notifier is a mobile application which is designed to uses location and sensor readings from the accelerometer and microphone to detect car crashes.</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="new_user">New User</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit">Submit</string>

    <string name="user_name">User Name</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="health_details">Health Details:</string>
    <string name="long_disease">If you are suffering from any long disease mention here</string>
    <string name="add_emergency_num">Add emergency contact number</string>
    <string name="emergency_contact_details">Emergency Contacts:</string>


    <string name="blood_groups_tv">Blood Groups</string>
    <string-array name="blood_groups">
        <item>Select Blood Group</item>
        <item>A+</item>
        <item>O+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>O-</item>
        <item>B-</item>
        <item>AB-</item>
    </string-array>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="add">Add</string>
    <string name="contact_name">Contact Name</string>
    <string name="done">Done</string>


    <string name="nav_menu_nearest_emergency_contacts">Emergency Contacts</string>
    <string name="menu_hospital_medical_shops_list">Hospitals and Medical shops</string>
    <string name="menu_update_emergency_contacts">Update Emergency Contacts</string>
    <string name="menu_update_health_details">Update Health Details</string>
    <string name="map_hospital_medical_details">Map With list of hospitals and Medical shops</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_nearst_emergency_contacts">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="bg">Blood Group</string>
    <string name="hd">Health Data</string>
    <string name="update">Update</string>
    <string name="enter_hd">Enter health details</string>

    <string name="No">No</string>
    <string name="crash_detect_text">It\'s look like you have been in a crash</string>
    <string name="crash_detect">Crash Detected</string>
    <string name="emergency">Emergency</string>
    <string name="callnow">Call Now</string>

    <string name="default_notification_channel_id">12345</string>
    <string name="proceed">Proceed</string>
    <string name="location">Location</string>
    <string name="sms">SMS</string>
    <string name="swipe_next">Swipe Next</string>
    <string name="plz_proceed">Please Proceed</string>
    <string name="location_description">Please grant location permission as Crash Notifier app will access your location to send location details to your emergency contacts in case of any accidents.</string>
    <string name="sms_description">Please grant SMS permission as Crash Notifier app will access your SMS permission to send SMS to your emergency contacts in case of any accidents</string>
    <string name="ok">OK</string>
    <string name="alert_notifier_title">Delivered</string>
    <string name="alert_notifier_description">Successfully we sent alert notification to your emergency contacts, help is on the way.</string>

</resources>