<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu_nearest_emergency_contacts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_menu_nearest_emergency_contacts" />
        <item
            android:id="@+id/nav_menu_hospitals_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_hospital_medical_shops_list" />
        <item
            android:id="@+id/nav_menu_update_emergency_contacts"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_update_emergency_contacts" />
        <item
            android:id="@+id/nav_update_health_details"
            android:icon="@color/button_blue"
            android:title="@string/menu_update_health_details"/>
    </group>
</menu>