<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="LoginViewModel"
            type="com.mouritech.crashnotifier.data.viewmodel.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="visible"
            android:id="@+id/mobileNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="2dp"
                android:id="@+id/mobileNumberInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:boxStrokeColor="@color/button_blue"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                tools:ignore="MissingConstraints"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/mobile_number"
                    android:background="@null"
                    android:maxLength="10"
                    android:inputType="number"
                    android:text="@={LoginViewModel.mobileNumber}"
                    style="@style/MobileNumber"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobileNumberInput">

                <TextView
                    android:id="@+id/sendOTP"
                    style="@style/OtpText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:text="@string/send_otp" />

                <TextView
                    android:id="@+id/newUser"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/new_user"
                    style="@style/OtpText"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="2dp"
                android:id="@+id/enterOTPInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                app:boxStrokeColor="@color/button_blue"
                app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                tools:ignore="MissingConstraints"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterOTP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_otp"
                    android:text="@={LoginViewModel.otp}"
                    android:background="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/MobileNumber" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            style="@style/BlueButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
