<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <data>

        </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.SignupActivity">


                <TextView
                    android:id="@+id/tv_header"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:lineSpacingExtra="4sp"
                    style="@style/HeadingWhite"
                    android:text="@string/crash_detect"
                    android:gravity="center"
                    android:textColor="#333333"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@color/button_blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:foregroundGravity="center"
                    android:layout_marginTop="200dp"
                    android:layout_marginBottom="40dp"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toTopOf="@+id/submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_header">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/crash_detect_text"
                            android:textSize="20dp"
                            android:padding="10dp"
                            android:textColor="@color/red"/>
                </androidx.cardview.widget.CardView>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/No"
                    style="@style/BlueButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="UsingOnClickInXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>