<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="SignupViewModel"
            type="com.mouritech.crashnotifier.data.viewmodel.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.SignupActivity">


        <TextView
            android:id="@+id/newUserTV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/new_user"
            style="@style/HeadingWhite"
            android:background="@color/button_blue"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/scrollView"
            />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@+id/newUserTV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="@dimen/box_stroke_width"
                    android:id="@+id/userNameInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:boxStrokeColor="@color/button_blue"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    tools:ignore="MissingConstraints">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/user_name"
                        android:text="@{SignupViewModel.userName}"
                        android:background="@null"
                        style="@style/MobileNumber"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="2dp"
                    android:id="@+id/mobileNumberInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@color/button_blue"
                    app:layout_constraintTop_toBottomOf="@+id/userNameInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/mobile_number"
                        android:text="@{SignupViewModel.mobileNumber}"
                        android:background="@null"
                        android:inputType="number"
                        android:maxLength="10"
                        style="@style/MobileNumber"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="@dimen/box_stroke_width"
                    android:id="@+id/genderInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@color/button_blue"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toBottomOf="@+id/mobileNumberInput">
                    <Spinner
                        android:id="@+id/genderSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/gender"
                        android:background="@drawable/tv_bg"
                        style="@style/MobileNumber"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="@dimen/box_stroke_width"
                    android:id="@+id/dobInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@color/button_blue"
                    app:layout_constraintTop_toBottomOf="@+id/genderInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/dob"
                        android:background="@null"
                        android:focusable="false"
                        android:text="@{SignupViewModel.dob}"
                        style="@style/MobileNumber"/>
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/hdtv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/health_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dobInput"
                    style="@style/Heading"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="@dimen/box_stroke_width"
                    android:id="@+id/bloodGroupInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@color/button_blue"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toBottomOf="@+id/hdtv">
                    <Spinner
                        android:id="@+id/bloodGroupSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/tv_bg"
                        android:paddingLeft="15dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@+id/hdtv"
                        style="@style/MobileNumber"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="@dimen/box_stroke_width"
                    android:id="@+id/longDiseaseInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@color/button_blue"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintTop_toBottomOf="@+id/bloodGroupInput">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/longDiseaseDesc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/long_disease"
                        android:background="@null"
                        android:text="@{SignupViewModel.healthData}"
                        style="@style/MobileNumber"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/contactsRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@color/button_blue"
                    android:background="@drawable/tv_bg"
                    app:layout_constraintTop_toBottomOf="@+id/longDiseaseInput"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addEmergencyContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_emergency_num"
                    style="@style/BlueButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/contactsRV"/>



            </androidx.constraintlayout.widget.ConstraintLayout>



        </ScrollView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            style="@style/BlueButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

